# Stockpulse

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
ingestion/: fetch_data.py
